force-app/main/default/objects/Generic_Event__e/Generic_Event__e.object-meta.xml
<CustomObject>
    <description>Generic Platform Event which minics the structure for CDC</description>
    <label>Generic Event</label>
    <pluralLabel>Generic Events</pluralLabel>
</CustomObject>