force-app/main/default/objects/Generic_Event__e/fields/changedFields__c.field-meta.xml
<CustomField>
    <fullName>changedFields__c</fullName>
    <label>changedFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>