force-app/main/default/objects/Generic_Event__e/fields/changeOrigin__c.field-meta.xml
<CustomField>
    <fullName>changeOrigin__c</fullName>
    <label>changeOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>