force-app/main/default/objects/Generic_Event__e/fields/changeType__c.field-meta.xml
<CustomField>
    <fullName>changeType__c</fullName>
    <label>changeType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>