force-app/main/default/objects/Generic_Event__e/fields/commitTimestamp__c.field-meta.xml
<CustomField>
    <fullName>commitTimestamp__c</fullName>
    <label>commitTimestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>