force-app/main/default/objects/Generic_Event__e/fields/commitUser__c.field-meta.xml
<CustomField>
    <fullName>commitUser__c</fullName>
    <label>commitUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>