force-app/main/default/objects/Generic_Event__e/fields/entityName__c.field-meta.xml
<CustomField>
    <fullName>entityName__c</fullName>
    <label>entityName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>