force-app/main/default/objects/Generic_Event__e/fields/recordIds__c.field-meta.xml
<CustomField>
    <fullName>recordIds__c</fullName>
    <label>recordIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>