force-app/main/default/objects/Generic_Event__e/fields/sequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>sequenceNumber__c</fullName>
    <label>sequenceNumber</label>
    <length>2</length>
    <type>Text</type>
</CustomField>