force-app/main/default/objects/Generic_Event__e/fields/transactionKey__c.field-meta.xml
<CustomField>
    <fullName>transactionKey__c</fullName>
    <label>transactionKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>